fix: nav button, spacing

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   transform: translate(-50%);
 }
 
-.navBar:hover {
+.navBar:active {
   height: 15%;
 }
 
